# oboe_mock

./: .project  README.md  settings.gradle
app/: .project  build.gradle
app/src/androidTest/java/com/yoshi991/oboe/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioCommon.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  DuplexCallback.cpp  DuplexCallback.h  DuplexEngine.cpp  DuplexEngine.h  FunctionList.h  OboeApiType.h  jni_bridge.cpp
app/src/main/cpp/debug-utils/: logging_macros.h
app/src/main/cpp/decoder/: WavDecoder.cpp  WavDecoder.h
app/src/main/cpp/libs/iolib/: CMakeLists.txt
app/src/main/cpp/libs/iolib/player/: OneShotSampleSource.cpp  SampleBuffer.cpp  SampleBuffer.h  SampleSource.h  SimpleMultiPlayer.cpp
app/src/main/cpp/libs/parselib/: CMakeLists.txt
app/src/main/cpp/libs/parselib/stream/: MemInputStream.h
app/src/main/cpp/libs/parselib/wav/: WavFmtChunkHeader.cpp  WavStreamReader.cpp
app/src/main/cpp/renderer/: MicRenderer.cpp  MicRenderer.h
app/src/main/java/com/yoshi991/oboe/: EffectsAdapter.kt  LiveEffectEngine.java  MainActivity.java  MainActivity.kt  NativeInterface.kt
app/src/main/java/com/yoshi991/oboe/datatype/: Effect.kt  EffectDescription.kt  ParamDescription.kt
app/src/main/java/com/yoshi991/oboe/util/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java  NativeAudioEngineBridge.kt
app/src/main/res/layout/: activity_main.xml  effect_header.xml  effect_view.xml  param_seek.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yoshi991/oboe/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
